<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="32dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/subaru_text"
            android:scaleType="centerCrop"
            android:src="@mipmap/aq2" />

        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password_text"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#00FF00"
            android:text="@string/register_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account_prompt"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
