<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.fragments.RepairFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/cleaning_image_text"
        android:scaleType="centerCrop"
        android:src="@mipmap/cleaning" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cleaning_service_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/vehicle_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/vehicle_types"
        android:padding="4dp"
        android:prompt="@string/select_vehicle_prompt"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_cost_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:id="@+id/service_cost_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/no_pay_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/pay_later_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pay_later_text" />

    <Button
        android:id="@+id/complete_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_success"
        android:backgroundTint="@color/colorSuccess"
        android:text="@string/complete_request_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>