<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/subaru_text"
            android:scaleType="centerCrop"
            android:src="@mipmap/subaru" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="#000080" />

        <TextView
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/health_cars_services_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="#011efe" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="360dp"
                android:layout_height="fill_parent"
                android:hint="@string/username_text"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textAlignment="center" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#2a8eba"
                    android:text="@string/login_text"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="#2a8eba"
                    android:text="@string/register_text"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember_me_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remember_me_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgot_password_quiz"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/forgot_password_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="#00bfff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/licence_prompt"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:background="@mipmap/texture_images"
            android:gravity="center"
            android:text="@string/welcome_back_text"
            android:textColor="#FFFF00"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>