<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.fragments.TransactionFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/pickup_text"
        android:scaleType="centerCrop"
        android:src="@mipmap/money" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <LinearLayout
            android:id="@+id/amount_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_cost_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/no_pay_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/pay_via_bank_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount_layout"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_primary"
            android:text="@string/pay_via_bank_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/pay_via_phone_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pay_via_bank_button"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_success"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/pay_via_bank_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


    </RelativeLayout>
</LinearLayout>